--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </nav>
 
     <div class="container">
+    </br>
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
@@ -190,7 +191,7 @@
                     <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 
-                <div class="col-sm-4 text-center">
+                <div class="col-sm-4 text-center d-none d-sm-block">
                     <h5>Contact</h5>
                     <a role="button" class="btn btn-link" href="tel:+12065555555"><i class="fa fa-phone"></i> 1-206-555-5555</a><br>
                     <a role="button" class="btn btn-link" href="mailto:shellysseafood@gmail.com"><i class="fa fa-envelope-o"></i> shellysseafood@gmail.com</a>
